--- a/Server_G8/.classpath
+++ b/Server_G8/.classpath
@@ -7,7 +7,11 @@
 	</classpathentry>
 	<classpathentry excluding="ocsf/client/|ocsf/server/|ocsf/" kind="src" path="src"/>
 	<classpathentry kind="src" path="src/ocsf"/>
-	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-8.0.13.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/mysql-connector-java-8.0.13.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX">
 		<attributes>
 			<attribute name="module" value="true"/>
